using UnityEngine;

namespace Sample.Iterator.Sample4
{
    public interface Aggregate
    {
        Iterator _iterator();
    }
}